# setsun.xyz

./: .babelrc  .cta.json  .eslintrc.js  .flowconfig  .gitignore  .gitmodules  .npmrc  .oxlintrc.json  .prettierrc  LICENSE  README.md  mise.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  snowpack.config.js  tailwind.config.js  tailwind.config.ts  turbo.json  vite.config.mts  webpack.config.js  wrangler.toml
.circleci/: config.yml
apps/portfolio/: .eslintrc.js  Cargo.toml  README.md  next.config.js  next.config.mjs  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
apps/portfolio/.github/workflows/: production.yml
apps/portfolio/prisma/: schema.prisma
apps/portfolio/public/models/: lily_flower-transformed.glb  sketch_cat-transformed.glb  spaceship-transformed.glb  the_three_graces-transformed.glb
apps/portfolio/src/app/: icon.tsx  layout.tsx  middleware.ts  page.tsx
apps/portfolio/src/browser-automation/: generate-3d-previews.ts
apps/portfolio/src/common/: constants.tsx
apps/portfolio/src/components/: CircleWaveform.tsx  Footer.tsx  Layout.tsx  Navigation.tsx  PagePreviewLink.tsx  PlotHelper.tsx  PointsImage.tsx  Post.tsx  RadialBarFrequencyGraph.tsx  ShaderPreview.tsx  Spectogram.tsx  SpotifyIframePlaylist.tsx  VisualizerCanvas.tsx  VisualizerGallery.tsx
apps/portfolio/src/context/: MultiplayerContext.tsx
apps/portfolio/src/hooks/: useAudioAnalyzer.tsx  useTurntable.ts
apps/portfolio/src/json/: counties.json
apps/portfolio/src/server/: trpc.ts
apps/portfolio/src/shaders/: kaleidoscope.frag  rotate.glsl
(+279 files in other folders)
